Fix Win32 compilation

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -65,10 +65,12 @@ endif()
 find_package(GLEW 3.0.0 QUIET)
 if (NOT GLEW_FOUND)
     if (ENGINE_OS_WINDOWS)
-        set(GLEW_LOCATION "${CMAKE_SOURCE_DIR}/../external/glew")
+        set(GLEW_LOCATION "${CMAKE_SOURCE_DIR}/../external/glew/lib/windows/${ARCH_DIR}")
     elseif (ENGINE_OS_LINUX)
         set(GLEW_LOCATION "${CMAKE_SOURCE_DIR}/../external/glew")
     endif()
+
+    set(GLEW_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/../external/glew/include")
     find_package(GLEW 3.0.0 REQUIRED)
 endif()
 
@@ -76,10 +78,12 @@ endif()
 find_package(GLFW 3.0.0 QUIET)
 if (NOT GLFW_FOUND)
     if (ENGINE_OS_WINDOWS)
-        set(GLFW_LOCATION "${CMAKE_SOURCE_DIR}/../external/glfw")
+        set(GLFW_LOCATION "${CMAKE_SOURCE_DIR}/../external/glfw/lib/windows/${ARCH_DIR}")
     elseif (ENGINE_OS_LINUX)
         set(GLFW_LOCATION "${CMAKE_SOURCE_DIR}/../external/glfw")
     endif()
+
+    set(GLFW_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/../external/glfw/include")
     find_package(GLFW 3.0.0 REQUIRED)
 endif()
 
