Add glfw and glew in the repository

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -5,6 +5,9 @@ cmake_minimum_required(VERSION 3.0)
 set(EXECUTABLE_NAME "ENGINE")
 project(${EXECUTABLE_NAME})
 
+# include the config file
+include(${CMAKE_SOURCE_DIR}/cmake/Config.cmake)
+
 # All source files using glob
 file(GLOB_RECURSE source_files src/*)
 file(GLOB_RECURSE include_files include/*)
@@ -36,15 +39,36 @@ source_group_files(${imGuizmo_source_files})
 # add ECS includes with ECS_INCLUDE_DIRS
 include_directories(${ECS_INCLUDE_DIRS})
 
+#Set glfw directory and library on Windows
+IF (OS_WINDOWS)
+  set(GLFW_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/external/glfw/include)
+  find_library(GLFW_LIBRARY glfw3 PATHS ${CMAKE_SOURCE_DIR}/external/glfw/lib/${ARCH_DIR})
+  set(GLFW_FOUND true)
+# Find GLFW on linux
+ELSE()
+  find_package(GLFW 3.0.0 REQUIRED)
+ENDIF()
+
+IF (NOT GLFW_FOUND)
+  message(FATAL_ERROR "Can't find glfw library")
+ENDIF()
+
 # Use static lib of glew
 add_definitions(-DGLEW_STATIC)
 
+#Set glew directory and library on Windows
+IF (OS_WINDOWS)
+  set(GLEW_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/external/glew/include)
+  find_library(GLEW_LIBRARY glew32s PATHS ${CMAKE_SOURCE_DIR}/external/glew/lib/${ARCH_DIR})
+  set(GLEW_FOUND true)
+# Find GLEW on linux
+ELSE()
+  find_package(GLEW REQUIRED)
+ENDIF()
 
-# Find GLFW library
-find_package(GLFW 3.0.0 REQUIRED)
-
-# Find GLEW library
-find_package(GLEW REQUIRED)
+IF (NOT GLEW_FOUND)
+  message(FATAL_ERROR "Can't find glew library")
+ENDIF()
 
 # Find Opengl library
 find_package(OpenGL REQUIRED)
@@ -52,14 +76,11 @@ find_package(OpenGL REQUIRED)
 # Find FMOD library
 
 #Set Assimp directory and library on Windows
-IF (WIN32)
+IF (OS_WINDOWS)
   set(ASSIMP_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/external/Assimp/include)
-  IF (CMAKE_SIZEOF_VOID_P EQUAL 8)
-    find_library(ASSIMP_LIBRARY assimp PATHS ${CMAKE_SOURCE_DIR}/external/Assimp/lib/x64)
-  ELSE()
-    find_library(ASSIMP_LIBRARY assimp PATHS ${CMAKE_SOURCE_DIR}/external/Assimp/lib/x86)
-  ENDIF()
+  find_library(ASSIMP_LIBRARY assimp PATHS ${CMAKE_SOURCE_DIR}/external/Assimp/lib/${ARCH_DIR})
   set(ASSIMP_FOUND true)
+#Find assimp on linux
 ELSE()
   find_package(Assimp REQUIRED)
 ENDIF()
@@ -68,11 +89,12 @@ IF (NOT ASSIMP_FOUND)
   message(FATAL_ERROR "Can't find assimp library")
 ENDIF()
 
-IF (WIN32)
 #Set Freetype directory and library on Windows
+IF (OS_WINDOWS)
   set(FREETYPE_INCLUDE_DIR_ft2build ${CMAKE_SOURCE_DIR}/external/freetype/include/freetype2)
   set(FREETYPE_LIBRARIES ${CMAKE_SOURCE_DIR}/external/freetype/lib/freetype.lib)
   set(FREETYPE_FOUND true)
+#Find freetype on linux
 ELSE()
     find_package(Freetype REQUIRED)
 ENDIF()
@@ -81,7 +103,7 @@ IF (NOT FREETYPE_FOUND)
   message(FATAL_ERROR "Can't find freetype library")
 ENDIF()
 
-IF (WIN32)
+IF (OS_WINDOWS)
 #Set FMOD directory and library on Windows
   set(FMOD_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/external/fmod/inc)
     find_library(FMOD_LIBRARY fmodL64_vc PATHS ${CMAKE_SOURCE_DIR}/external/fmod/lib)
@@ -104,7 +126,7 @@ include_directories(${ASSIMP_INCLUDE_DIR})
 
 # Include dirent only for windows
 # Linux have his own header
-IF (WIN32)
+IF (OS_WINDOWS)
     include_directories(${CMAKE_SOURCE_DIR}/external/dirent)
 ENDIF()
 
@@ -112,7 +134,7 @@ ENDIF()
 add_library(${EXECUTABLE_NAME} STATIC ${source_files} ${imgui_source_files} ${include_files} ${imGuizmo_source_files} ${jsoncpp_source_files})
 
 #Disable ImGui C4244 warnings on Windows
-IF (WIN32)
+IF (OS_WINDOWS)
   set_property(SOURCE ${imgui_source_files} APPEND_STRING PROPERTY COMPILE_FLAGS "/wd4244")
 ENDIF()
 
